Collapse raw data by default and ensure dropdown works

--- a/assets/css/local-uts.css
+++ b/assets/css/local-uts.css
@@ -189,6 +189,10 @@ pre {
   display: none !important;
 }
 
+.raw-data-details {
+  margin-bottom: 1rem;
+}
+
 #cui-options-dropdown .umls-app__button {
   width: auto;
   margin-right: 10px;
